Fix divider cursor issue on Firefox

--- a/www/stylesheets/style.css
+++ b/www/stylesheets/style.css
@@ -120,7 +120,7 @@ path.area {
 }
 
 .divider rect {
-	cursor: row-resize;
+	cursor: ns-resize;
 	fill: none;
 	pointer-events: all;
 }
